testdata/rules-tests/bad/AG-012-v1-ruby-hardcoded-key.rb
OPENAI_API_KEY = "sk-abc123def456ghi789jkl012mno345p"
anthropic_key ||= "sk-ant-abc123def456ghi789jkl012mno345p"
@hf_token = "hf_abc123def456ghi789jkl012mno345p"
api_key = "sk-proj-abc123def456ghi789jkl012mno345p678"
